--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
+    "hoek": "^5.0.3",
     "jquery": "^3.3.1",
     "moment": "^2.19.1",
     "node-sass": "^4.5.3"
